--- a/app/src/main/res/layout/activity_main2.xml
+++ b/app/src/main/res/layout/activity_main2.xml
@@ -15,7 +15,7 @@
         android:layout_height="wrap_content"
         android:text="TIC TAC TOE"
         android:textColor="@color/viking"
-        android:textSize="34sp"
+        android:textSize="48sp"
         android:textStyle="bold"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
@@ -93,7 +93,7 @@
         android:ems="13"
         android:hint="Enter your name"
         android:inputType="textPersonName"
-        android:textColor="@color/viking"
+        android:textColor="@color/sidecar"
         android:textColorHint="#C4FFCA"
         app:layout_constraintBottom_toTopOf="@+id/button_start"
         app:layout_constraintEnd_toEndOf="parent"
