--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -22,4 +22,10 @@
         <item name="android:layout_marginTop">20dp</item>
         <item name="android:textStyle">bold</item>
     </style>
+
+    <style name="box_style">
+        <item name="android:layout_width">100dp</item>
+        <item name="android:layout_height">100dp</item>
+        <item name="android:background">@drawable/rounded_square</item>
+    </style>
 </resources>
