--- a/app/src/main/res/layout/activity_board.xml
+++ b/app/src/main/res/layout/activity_board.xml
@@ -1,12 +1,13 @@
 <?xml version="1.0" encoding="utf-8"?>
-<layout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools">
+
 <RelativeLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@color/martinique"
-    tools:context=".MainActivity">
+    tools:context=".BoardActivity">
 
     <RelativeLayout
         android:id="@+id/linear"
@@ -16,10 +17,12 @@
         android:layout_marginTop="30dp">
 
         <RelativeLayout
+            android:id="@+id/player1_layout"
             android:layout_width="150dp"
             android:layout_height="150dp"
             android:layout_marginHorizontal="20dp"
-            android:background="@drawable/rounded_square_stroke">
+            android:background="@drawable/rounded_square_green_border"
+            >
 
             <TextView
                 android:id="@+id/player1_name"
@@ -39,12 +42,13 @@
         </RelativeLayout>
 
         <RelativeLayout
+            android:id="@+id/player2_layout"
             android:layout_width="150dp"
             android:layout_height="150dp"
+            android:background="@drawable/rounded_square_white_border"
             android:layout_alignParentEnd="true"
-
             android:layout_marginHorizontal="20dp"
-            android:background="@drawable/rounded_square_stroke">
+            >
 
             <TextView
                 android:id="@+id/player2_name"
@@ -195,4 +199,3 @@
     </RelativeLayout>
 
 </RelativeLayout>
-</layout>
