--- a/app/src/main/res/layout/activity_home.xml
+++ b/app/src/main/res/layout/activity_home.xml
@@ -78,7 +78,7 @@
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginEnd="48dp"
-        android:background="@drawable/oval_button"
+        android:background="@drawable/oval_green_button"
         android:text="Start"
         android:textColor="@color/martinique"
         app:layout_constraintBottom_toBottomOf="parent"
