--- a/app/src/main/res/layout/activity_result_dialog.xml
+++ b/app/src/main/res/layout/activity_result_dialog.xml
@@ -10,7 +10,7 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:background="@drawable/oval_button"
+        android:background="@drawable/oval_green_button"
         android:backgroundTint="@color/martinique"
         android:orientation="vertical">
         <TextView
