--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -28,4 +28,13 @@
         <item name="android:layout_height">100dp</item>
         <item name="android:background">@drawable/rounded_square</item>
     </style>
+
+    <style name = "dialog_animation">
+        <item name = "android:windowEnterAnimation">
+            @anim/slide_scale_in
+        </item>
+        <item name = "android:windowExitAnimation">
+            @anim/slide_scale_out
+        </item>
+    </style>
 </resources>
