--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -5,7 +5,7 @@
     <color name = "swansdown">#d8eee2</color>
     <color name = "sidecar">#f3ebb3</color>
     <color name ="biloba_flower">#c89fea</color>
-    <color name="purple_200">#FFBB86FC</color>
+    <color name="purple_200">#7055F2</color>
     <color name="purple_500">#FF6200EE</color>
     <color name="purple_700">#FF3700B3</color>
     <color name="teal_200">#FF03DAC5</color>
